# parsley

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOY.md  LICENSE  LOADTEST.md  Makefile  PLAN.md  REFACTOR.md  contract.json  docker-compose.loadtest.yml  docker-compose.yml  nginx.conf  vercel.json
.github/ISSUE_TEMPLATE/: extraction-failure.md
.github/workflows/: ci.yml  loadtest-baseline.yml  update-screenshots.yml
backend/: .dockerignore  Dockerfile.dev  pyproject.toml  requirements.txt  vercel.json
backend/app/: config.py  extractor.py  fetch.py  main.py  models.py  normalize.py  rate_limit.py  services.py
backend/tests/: test_api.py  test_contract.py  test_extractor.py  test_fetch.py  test_health.py  test_services.py
backend/tests/fixtures/: no_recipe.html
backend/tests/fixtures/graph_howtostep/: expected.json  page.html
backend/tests/fixtures/list_howtosection/: expected.json  page.html
backend/tests/fixtures/toplevel_string_instructions/: expected.json  page.html
frontend/: .dockerignore  .env.example  .gitignore  .oxlintrc.json  Dockerfile.dev  REDESIGN.md  index.html  lighthouserc.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.module.css  App.tsx  api.test.ts  api.ts  errorInfo.ts  index.css  ingredients.ts  main.tsx  print.css
frontend/src/app/: App.module.css  App.test.tsx  App.tsx  router.tsx  (+1 more)
loadtest/: baseline.js  breakpoint.js  check_regression.py  common.js  mock_upstream.py  smoke.js  spike.js  stress.js
scripts/: docker-config.py  services.sh
(+133 files in other folders)
