[project]
name = "parsley-backend"
version = "0.1.0"
description = "Parsley API — extract clean recipes from noisy recipe pages"
requires-python = ">=3.12"
dependencies = [
    "brotli>=1.2.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "recipe-scrapers>=15.11.0",
    "slowapi>=0.1.10",
    "uvicorn[standard]>=0.50.2",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
